--- a/apps/host/host/src/index.html
+++ b/apps/host/host/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>host</title>
+  <title>Furni</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image" href="assets/favicon.png" />
